[package]
name = "sparse-merkle-tree"
version = "0.6.3"
authors = ["jjy <jjyruby@gmail.com>, lansheng228 <lansheng228@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nervosnetwork/sparse-merkle-tree"
description = "Sparse merkle tree implement in rust"
include = [
  "/src",
  "/benches",
  "/build.rs",
  "/c/deps/ckb-c-stdlib",
  "/c/ckb_smt.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
# SMT implemented in C
smtc = []
# A storage optimized SMT implemented in trie (https://ouvrard-pierre-alain.medium.com/sparse-merkle-tree-86e6e2fc26da)
trie = []

[dependencies]
cfg-if = "1.0.0"
blake2b-rs = { git = "https://github.com/MultiAdaptive/blake2b-rs.git", branch = "develop", commit = "3e1fe3c73217cd28677e5ceb66ddda618cb1fafd" }

[dev-dependencies]
proptest = "1.5.0"
criterion = "0.5.1"
rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"

[[bench]]
name = "smt_benchmark"
harness = false

[[bench]]
name = "store_counter_benchmark"
harness = false

[build-dependencies]
cc = "1.0.105"
